# FastAPI_intern

./: .coverage  .dockerignore  .env.nonlocal.sample  .env.sample  .gitignore  .pre-commit-config.yaml  .test.env  Dockerfile  README.md  alembic.ini  certificate.pem  cicd  docker-compose.local.yml  docker-compose.nonlocal.yml  docker-compose.yml  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  my_key.pem  print_config.py  pyproject.toml  pytest.ini   requirements.txt  riple.py  test.py
.github/workflows/: ci-cd.yml  ci-cd2.yml  python-app1.yml
app/: main.py
app/core/: config.py
app/db/: database.py  postgres.py  redis.py
app/models/: __init__.py  company.py  members.py  notifications.py  question.py  quiz.py  quizresult.py  users.py
app/repository/: analytics.py  members.py  notifications.py  questions.py  quizresult.py  quizzes.py  users.py
app/routers/: analytics.py  auth.py  checkers.py  companies.py  me.py  members.py  questions.py  quizresult.py  quizzes.py  users.py
app/schemas/: analytics.py  companies.py  members.py  notifications.py  questions.py  quizresult.py  quizzes.py  users.py
app/services/: auth.py  redis.py  scheduler.py
migration/: env.py
migration/versions/: 1563aedf6cd8_add_quizresult_model.py  191c333a110b_create_questions_and_quizzes_tables.py  2db444845868_create_notifications_table.py  3202660d0747_create_quiz_results_table.py  342e745e3392_add_correct_user_table.py  364844c2670d_add_correct_user_table.py  612494dc41dc_create_quiz_results_table.py  6669232a0669_initial_migration.py  705bc08870f1_add_member.py  a9edf27a85f4_initial_migration.py  af9902c26b01_add_companies_table.py  b3ff8b161948_add_correct_user_table.py  bbc4fd299a2f_add_auth.py  bd6fceb97f80_add_companies_table.py  (+2 more)
postgres-data/: postmaster.pid
tests/: conftest.py  test_analytics.py  test_auth.py  test_checkers.py  test_company.py  test_main.py  test_member_repository.py  test_notification_repository.py  test_question_repository.py  test_quiz_repository.py  test_quizresult_repository.py  test_redis.py  test_repo_users.py  test_route_users.py  test_router_users.py  test_scheduler.py  test_service_auth.py  test_user.py
(+44 files in other folders)
